# python-snake-lozit5

./: README.md  curses0.py  curses1.py  curses2.py  curses3.py  curses4.py  pyproject.toml
